conky (1.11.6-1) UNRELEASED; urgency=medium

  * Acknowledge NMU, thanks to Boyuan Yang!
  * New upstream release.
    - Add build-dep on liblua5.3-dev.
    - Drop build-dep on liblua5.1-0-dev, libtolua++5.1-dev.

 -- Vincent Cheng <vcheng@debian.org>  Sun, 09 Aug 2020 19:46:49 -0700

conky (1.10.8-1.1) unstable; urgency=high

  * Non-maintainer upload.
  * debian/control: Build-depends on libdbus-glib-1-dev.
    (Closes: #962330)

 -- Boyuan Yang <byang@debian.org>  Fri, 12 Jun 2020 06:26:48 -0400

conky (1.10.8-1) unstable; urgency=medium

  * Acknowledge NMU, thanks to Adrian Bunk!
  * New upstream release.
    - Fix segfault when kernel reports non-sequential SMP CPU indices.
      (Closes: #873446)
    - Drop debian/patches/gcc-7.patch, applied upstream.
  * Remove build-dep on automake. (Closes: #865138)
  * Update Standards version from 3.9.8 to 4.1.3.
    - Update all priority: extra packages to priority: optional.

 -- Vincent Cheng <vcheng@debian.org>  Wed, 28 Feb 2018 02:22:09 -0800

conky (1.10.6-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS with gcc 7. (Closes: #853353)

 -- Adrian Bunk <bunk@debian.org>  Sun, 03 Sep 2017 18:12:29 +0300

conky (1.10.6-1) unstable; urgency=medium

  * New upstream release.
  * Enable pulseaudio support in conky-all. (Closes: #841198)
    - Add build-dep on libpulse-dev.
  * Drop build-dep on libasound2-dev and remove references to ALSA mixer
    support in package descriptions; this has not been supported since 2010.
    (Refer to #726637)

 -- Vincent Cheng <vcheng@debian.org>  Thu, 08 Dec 2016 23:46:09 -0800

conky (1.10.5-1) unstable; urgency=medium

  * New upstream release.
    - Drop all existing patches; applied upstream.

 -- Vincent Cheng <vcheng@debian.org>  Tue, 04 Oct 2016 21:01:32 -0700

conky (1.10.4-1) unstable; urgency=medium

  * New upstream release.
    - Drop all existing patches; applied upstream.
    - Add debian/patches/fix-ftbfs-with-build-x11-off.patch to fix FTBFS when