@@ -17,7 +17,7 @@ COMMON_CONF_ARGS=-DCMAKE_BUILD_TYPE=None \
                  -DCMAKE_CXX_FLAGS="$(DEB_CXXFLAGS) $(DEB_CPPFLAGS)"
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
-       LINUX_CONF_ARGS=-DBUILD_WLAN=ON
+       LINUX_CONF_ARGS="-DBUILD_WLAN=ON -DBUILD_JOURNAL=ON"
 endif
 
 ifeq ($(DEB_HOST_ARCH),i386)
@@ -58,7 +58,10 @@ override_dh_auto_configure:
 	-DBUILD_AUDACIOUS=ON \
 	-DBUILD_CURL=ON \
 	-DBUILD_EVE=ON \
+	-DBUILD_ICAL=ON \
+	-DBUILD_ICONV=ON \
 	-DBUILD_IMLIB2=ON \
+	-DBUILD_IRC=ON \
 	-DBUILD_LUA_CAIRO=ON \
 	-DBUILD_LUA_IMLIB2=ON \
 	-DBUILD_LUA_RSVG=ON \
