@@ -4,6 +4,11 @@ conky (1.11.6-1) UNRELEASED; urgency=medium
   * New upstream release.
     - Add build-dep on liblua5.3-dev.
     - Drop build-dep on liblua5.1-0-dev, libtolua++5.1-dev.
+  * Enable previously disabled features in conky-all:
+    - iCal (add build-dep on libical-dev)
+    - IRC (add build-dep on libircclient-dev)
+    - iconv
+    - systemd journal (add build-dep on libsystemd-dev)
 
  -- Vincent Cheng <vcheng@debian.org>  Sun, 09 Aug 2020 19:46:49 -0700
 
